fixed the wrapping to make sure it doesn't cut off in the middle of a word

--- a/packages/react-frontend/src/routes/Album.css
+++ b/packages/react-frontend/src/routes/Album.css
@@ -34,3 +34,9 @@
 .album-link {
     text-decoration: none;
 }
+.album-name{
+    max-width: 270px; 
+    margin: 5px 0;
+    overflow-wrap: break-word; 
+    word-break: normal; /* so words are not broken mid-word */
+}
